[project]
name = "comfyui_camerComfyUI_camera_node"
description = "This node was created to send a webcam to ComfyUI in real time. This node is recommended for use with LCM."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["numpy", "torch", "opencv-python"]

[project.urls]
Repository = "https://github.com/AdamRashid96/ComfyUI_camera_node"

[tool.comfy]
PublisherId = "AdamRashid96"
DisplayName = "ComfyUI_camera_node"
Icon = ""
